--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
           <div class="social">
             <h3>Social</h3>
-            <div class="social-item"><span class="pic a"></span> Facebook</div>
-            <div class="social-item"><span class="pic b"></span> Twitter</div>
-            <div class="social-item"><span class="pic c"></span> YouTube</div>
-            <div class="social-item"><span class="pic d"></span> LinkedIn</div>
+            <div class="social-item"><span class="pic a"></span><a href="https://www.facebook.com" target="_blank">Facebook</a> </div>
+            <div class="social-item"><span class="pic b"></span><a href="https://www.twitter.com" target="_blank">Twitter</a> </div>
+            <div class="social-item"><span class="pic c"></span><a href="https://www.youtube.com" target="_blank"> YouTube</a></div>
+            <div class="social-item"><span class="pic d"></span><a href="https://www.linkedin.com" target="_blank"> LinkedIn</a></div>
           </div>
         </div>
 
